--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -39,7 +39,7 @@
         "dutch": "הולנדית",
         "romanian": "רומנית",
         "russian": "רוסית",
-        "UNKNOWN": "לא מזוהה",
+        "unknown": "לא מזוהה",
         "new": "הוסף סיפור חדש",
         "new-story-content": "סיפור חדש",
         "new-story": "ללא כותרת",
@@ -282,7 +282,7 @@
         "dated": "תמונות מתוארכות בלבד",
         "undated": "תמונות בלתי מתוארכות בלבד",
         "drag-me": "גרור אותי ימינה ושמאלה",
-        "unknown": "בלתי ידוע",
+        "unknown": "טרם זוהה. הקלק לזיהוי",
         "upload": "הוסף תמונות",
         "photo-date": "תאריך התמונה",
         "photos-date": "תאריך התמונות",
@@ -436,7 +436,8 @@
         "photo-uploaded": "הקלק על התמונה כדי לזהות בה אנשים",
         "ready-to-save": "מוכן להעלאת התמונה",
         "photo-name": "כתובית מתחת לתמונה",
-        "duplicate": "התמונה כבר הועלתה בעבר"
+        "duplicate": "התמונה כבר הועלתה בעבר",
+        "not-logged-in": "כדי להמשיך, עליך להתחבר"
     },
     "consts": {
         "vis-never": "לא ניתן לתצוגה!",
