--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -270,7 +270,7 @@
         "larger": "הגדל",
         "save-merges": "שמור את המיזוגים",
         "save-topic-group": "שמור כנושא מְקֻבָּץ",
-        "apply-to-selected": "יִשֵּׂם לתמונות שנבחרו",
+        "apply-to-selected": "שמור את התיוגים",
         "download": "הורד את התמונות שנבחרו",
         "done-selecting": "סיים את שלב הבחירה",
         "new-story": "ללא כותרת",
@@ -333,7 +333,7 @@
         "audios-were-selected": "הקלטות נבחרו",
         "upload-in-progress": "...ההקלטות נשלחות לשרת",
         "left": "נותרו",
-        "apply-to-selected": "יִשֵּׂם להקלטות שנבחרו",
+        "apply-to-selected": "שמור את התיוגים",
         "word-index": "חפש מילים בסיפורי ההקלטות",
         "uploaded-any-time": "הקלטות שהועלו בזמן כלשהו",
         "uploaded-today": "הקלטות שהועלו היום",
@@ -353,7 +353,7 @@
         "add-video": "הוסף וידאו",
         "paste-video-address": "הדבק את כתובת הוידאו שהעתקת מיוטיוב",
         "video-name": "תן שם לקטע הוידאו",
-        "apply-to-selected": "יִשֵּׂם לסרטים שנבחרו",
+        "apply-to-selected": "שמור את התיוגים",
         "send": "שלח",
         "message-successful": "הוידאו הועלה בהצלחה",
         "duplicate": "הוידאו כבר קיים במערכת",
@@ -431,13 +431,16 @@
         "click": "כדי להעלות את התמונות שלך, הקלק על הקישור",
         "regards": "בברכה",
         "next-photo": "העלה עוד תמונה",
-        "save-photo-story": "שמור את ספורה של התמונה",
+        "save-photo-story": "שמור את השינויים",
         "ready-to-select": "",
         "photo-uploaded": "הקלק על התמונה כדי לזהות בה אנשים",
         "ready-to-save": "מוכן להעלאת התמונה",
         "photo-name": "כתובית מתחת לתמונה",
         "duplicate": "התמונה כבר הועלתה בעבר",
-        "not-logged-in": "כדי להמשיך, עליך להתחבר"
+        "not-logged-in": "כדי להמשיך, עליך להתחבר",
+        "cancel-changes": "בטל את השינויים",
+        "unknown-photographer-name": "צלם לא ידוע",
+        "photographer-name": "שם הצלם"
     },
     "consts": {
         "vis-never": "לא ניתן לתצוגה!",
