--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -90,7 +90,7 @@
     "members": {
         "members": "חברים",
         "new": "הוסף חבר",
-        "filter": "הקלד שם פרטי, שם משפחה או כינוי",
+        "filter": "הקלד שם פרטי, שם משפחה או כינוי, או שם של חבר חדש",
         "clear": "נקה",
         "family-connections": "קשרי משפחה",
         "life-summary": " קיצור תולדות החיים של",
