--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -321,7 +321,8 @@
         "unrecognized": "תמונות שלא זוהו",
         "recognized-or-not": "תמונות שזוהו ושלא זוהו",
         "story": "בחירת תמונות הקשורות לסיפור",
-        "term": "בחירת תמונות הקשורות למונח"
+        "term": "בחירת תמונות הקשורות למונח",
+        "cancel-indentification": "בטל את הזיהוי"
     },
     "audios": {
         "audios": "הקלטות",
