context menu. more. wip.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -323,7 +323,8 @@
         "recognized-or-not": "Both recognized and unrecognized",
         "story": "Select photos associated with the story",
         "term": "Select photos associated with the term",
-        "cancel-indentification": "Cancel the identification"
+        "cancel-indentification": "Cancel the identification",
+        "chronological-time-order": "Chronological time order"
     },
     "videos": {
         "videos": "Video",
