--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -323,7 +323,7 @@
         "story": "בחירת תמונות הקשורות לסיפור",
         "term": "בחירת תמונות הקשורות למונח",
         "cancel-indentification": "בטל את הזיהוי",
-        "chronological-time-order": "סדר כרונולוגי"
+        "chronological-order": "סדר כרונולוגי"
     },
     "audios": {
         "audios": "הקלטות",
