--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -434,9 +434,9 @@
         "regards": "בברכה",
         "next-photo": "העלה עוד תמונה",
         "save-photo-story": "שמור את השינויים",
-        "ready-to-select": "",
-        "photo-uploaded": "הקלק על התמונה כדי לזהות בה אנשים",
-        "ready-to-save": "מוכן להעלאת התמונה",
+        "ready-to-select": "לחץ על הכפתור כדי לבחור תמונה",
+        "photo-uploaded": "הקלק על התמונה כדי לזהות בה אנשים<br/>ספר בקצרה על התמונה בתיבה משמאל",
+        "ready-to-save": "לחץ על הכפתור כדי להעלות את התמונה לאתר",
         "photo-name": "כתובית מתחת לתמונה",
         "duplicate": "התמונה כבר הועלתה בעבר",
         "not-logged-in": "כדי להמשיך, עליך להתחבר",
@@ -445,7 +445,8 @@
         "photographer-name": "שם הצלם (אם ידוע לך)",
         "upload": "העלה את התמונה",
         "view-gallery": "צפה באתר המלא",
-        "explain-gallery": "האתר המלא יפתח בחלון נפרד. החלון הנוכחי יחכה לך."
+        "explain-gallery": "האתר יפתח בחלון נפרד.",
+        "old-photo-not-found": "<p dir='rtl'>התמונה לא זמינה כאן. צפה בה באתר המלא.</p>"
     },
     "consts": {
         "vis-never": "לא ניתן לתצוגה!",
