--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -268,6 +268,7 @@
         "photos-were-selected": "Selected photos - ",
         "sharing": "In addition to upload from your PC, photos may be shared from smartphones, cloud services etc. by sending them to ",
         "more-smaller": "More smaller",
+        "smaller": "Smaller",
         "larger": "Larger",
         "save-merges": "Save merges",
         "save-topic-group": "Save as compound topic",
