--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -266,6 +266,7 @@
         "save": "שלח",
         "photos-were-selected": " - תמונות שנבחרו",
         "sharing": " בנוסף להעלאה מהמחשב האישי, ניתן לשתף תמונות מסמרטפונים, שרותי ענן כדוגמת גוגל פוטוס וכדומה בכתובת ",
+        "smaller": "הקטן",
         "more-smaller": "הקטן",
         "larger": "הגדל",
         "save-merges": "שמור את המיזוגים",
