editing mode was destroyed.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -265,6 +265,7 @@
         "upload-files": "Upload photos",
         "select-photos": "Select photos",
         "save": "Save",
+        "send": "Send",
         "photos-were-selected": "Selected photos - ",
         "sharing": "In addition to upload from your PC, photos may be shared from smartphones, cloud services etc. by sending them to ",
         "more-smaller": "More smaller",
