--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -263,7 +263,8 @@
         "failed": " - לא נקלטו במערכת",
         "upload-files": "העלאת תמונות",
         "select-photos": "בחר תמונות",
-        "save": "שלח",
+        "send": "שלח",
+        "save": "שמור",
         "photos-were-selected": " - תמונות שנבחרו",
         "sharing": " בנוסף להעלאה מהמחשב האישי, ניתן לשתף תמונות מסמרטפונים, שרותי ענן כדוגמת גוגל פוטוס וכדומה בכתובת ",
         "smaller": "הקטן",
