--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -325,7 +325,9 @@
         "story": "בחירת תמונות הקשורות לסיפור",
         "term": "בחירת תמונות הקשורות למונח",
         "cancel-indentification": "בטל את הזיהוי",
-        "chronological-order": "סדר כרונולוגי"
+        "chronological-order": "סדר כרונולוגי",
+        "edit-face-location": "לעריכת מיקום וגודל המעגל, לחץ על הכפתור הימני של העכבר או גרור את שפת המעגל או את תוכו",
+        "click-to-identify": "הקלק על פרצוף כדי לזהותו"
     },
     "audios": {
         "audios": "הקלטות",
