--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -439,7 +439,7 @@
         "next-photo": "העלה עוד תמונה",
         "save-photo-story": "שמור את השינויים",
         "ready-to-select": "לחץ על הכפתור כדי לבחור תמונה",
-        "photo-uploaded": "הקלק על התמונה כדי לזהות בה אנשים<br/>ספר בקצרה על התמונה בתיבה משמאל",
+        "photo-uploaded": "הקלק על התמונה כדי לזהות בה אנשים. ספר בקצרה על התמונה בתיבה משמאל",
         "ready-to-save": "לחץ על הכפתור כדי להעלות את התמונה לאתר",
         "photo-name": "כתובית מתחת לתמונה",
         "duplicate": "התמונה כבר הועלתה בעבר",
@@ -450,7 +450,9 @@
         "upload": "העלה את התמונה",
         "view-gallery": "צפה באתר המלא",
         "explain-gallery": "האתר יפתח בחלון נפרד.",
-        "old-photo-not-found": "<p dir='rtl'>התמונה לא זמינה כאן. צפה בה באתר המלא.</p>"
+        "old-photo-not-found": "<p dir='rtl'>התמונה לא זמינה כאן. צפה בה באתר המלא.</p>",
+        "consent": "בהעלאת התמונה ופרטיה אתה מביע את הסכמתך לפרסומה באתר",
+        "explain-dates-range": "<b>טווח תאריכים: </b>דיוק התאריכים יכול להיות בשנים, חודשים או ימים. לאחר שהקלדת את תאריך הבסיס תוכל לבחור את סוף התקופה מהתפריט הנשלף שיופיע."
     },
     "consts": {
         "vis-never": "לא ניתן לתצוגה!",
