full screen view

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -281,6 +281,7 @@
         "new-story-content": "This photo has no story yet",
         "highlight-all": "Highlight all identified faces",
         "jump-to-story-page": "Go to the story page",
+        "fullscreen": "Full screen",
         "dated-or-not": "Dated and undated photos",
         "dated": "Dated photos only",
         "undated": "Undated photos only",
