--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -280,6 +280,7 @@
         "new-story-content": "לתמונה זו אין עדיין סיפור",
         "highlight-all": "האר את כל הפרצופים המזוהים",
         "jump-to-story-page": "עבור לדף התמונה",
+        "fullscreen": "תצוגה במסך מלא",
         "dated-or-not": "תמונות מתוארכות ובלתי מתוארכות",
         "dated": "תמונות מתוארכות בלבד",
         "undated": "תמונות בלתי מתוארכות בלבד",
