--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -522,6 +522,7 @@
         "mail_watcher": "מקבל הודעות דואר", 
         "archiver": "ארכיונאי", 
         "tester": "בודק",
+        "restricted": "עריכה עצמית בלבד",
         "duplicate-app-name": "מזהה האתר כבר תפוס!",
         "new-app-requested": "בקשתך בטיפול. אנא בדוק את תיבת הדואל שלך. אם לא קבלת הודעה תוך מספר דקות, בדוק את תיבת דואר הזבל.",
         "app-name": "מזהה האתר שלך (באותיות לועזיות)",
