--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -89,7 +89,7 @@
     },
     "members": {
         "members": "חברים",
-        "new": "הוסף חבר",
+        "new": "הוסף את ",
         "filter": "הקלד שם פרטי, שם משפחה או כינוי, או שם של חבר חדש",
         "clear": "נקה",
         "family-connections": "קשרי משפחה",
@@ -483,7 +483,8 @@
         "change-group": "העבר לקבוצה אחרת",
         "edit-item": "ערוך את שם הפריט",
         "remove-item": "בטל לגמרי את הפריט",
-        "show-untagged": "--הצג בלתי מתויגים--"
+        "show-untagged": "--הצג בלתי מתויגים--",
+        "add-item": "הוסף את "
     },
     "locales": {
         "he": "עברית",
