topics in group photo upload

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -453,7 +453,7 @@
         "explain-gallery": "האתר יפתח בחלון נפרד.",
         "old-photo-not-found": "<p dir='rtl'>התמונה לא זמינה כאן. צפה בה באתר המלא.</p>",
         "consent": "בהעלאת התמונה ופרטיה אתה מביע את הסכמתך לפרסומה באתר",
-        "explain-dates-range": "<b>טווח תאריכים: </b>דיוק התאריכים יכול להיות בשנים, חודשים או ימים. לאחר שהקלדת את תאריך הבסיס תוכל לבחור את סוף התקופה מהתפריט הנשלף שיופיע."
+        "explain-dates-range": "<p dir='rtl'><b>טווח תאריכים: </b>דיוק התאריכים יכול להיות בשנים, חודשים או ימים. לאחר שהקלדת את תאריך הבסיס תוכל לבחור את סוף התקופה מהתפריט הנשלף שיופיע.</p>"
     },
     "consts": {
         "vis-never": "לא ניתן לתצוגה!",
