reverse chronological order

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -328,6 +328,7 @@
         "term": "Select photos associated with the term",
         "cancel-indentification": "Cancel the identification",
         "chronological-order": "Chronological order",
+        "chronological-order-reverse": "Chronological order reversed",
         "edit-face-location": "Edit face location",
         "click-to-identify": "Click on a face to identify a person"
     },
