--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -327,6 +327,7 @@
         "term": "בחירת תמונות הקשורות למונח",
         "cancel-indentification": "בטל את הזיהוי",
         "chronological-order": "סדר כרונולוגי",
+        "chronological-order-reverse": "סדר כרונולוגי הפוך",
         "edit-face-location": "לעריכת מיקום וגודל המעגל, לחץ על הכפתור הימני של העכבר או גרור את שפת המעגל או את תוכו",
         "click-to-identify": "הקלק על פרצוף כדי לזהותו"
     },
