--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -454,7 +454,11 @@
         "explain-gallery": "האתר יפתח בחלון נפרד.",
         "old-photo-not-found": "<p dir='rtl'>התמונה לא זמינה כאן. צפה בה באתר המלא.</p>",
         "consent": "בהעלאת התמונה ופרטיה אתה מביע את הסכמתך לפרסומה באתר",
-        "explain-dates-range": "<p dir='rtl'><b>טווח תאריכים: </b>דיוק התאריכים יכול להיות בשנים, חודשים או ימים. לאחר שהקלדת את תאריך הבסיס תוכל לבחור את סוף התקופה מהתפריט הנשלף שיופיע.</p>"
+        "explain-dates-range": "<p dir='rtl'><b>טווח תאריכים: </b>דיוק התאריכים יכול להיות בשנים, חודשים או ימים. לאחר שהקלדת את תאריך הבסיס תוכל לבחור את סוף התקופה מהתפריט הנשלף שיופיע.</p>",
+        "contacts": "מכותבים",
+        "add-contact": "הוסף מכותב",
+        "contact-details": "פרטי המכותב",
+        "mail-contacts": "שלח הודעות למכותבים"
     },
     "consts": {
         "vis-never": "לא ניתן לתצוגה!",
@@ -547,7 +551,7 @@
         "fields-missing": "יש למלא את כל הפרטים!",
         "add-user": "הוסף משתמש",
         "enter-filter-text": "הקלד טקסט חיפוש",
-        "email": "Email",
+        "email": "דואל",
         "first-name": "שם פרטי",
         "last-name": "שם משפחה",
         "privileges": "תפקידים",
