letter. interpolation. wip.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -459,7 +459,8 @@
         "contact-details": "Contact details",
         "mail-contacts": "Send email to group contacts",
         "edit-letter": "Edit letter",
-        "edit-letter-template": "Edit letter template"
+        "edit-letter-template": "Edit letter template",
+        "the-link": "the link"
     },
     "consts": {
         "vis-never": "Never display!",
