--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -90,7 +90,8 @@
     "members": {
         "members": "חברים",
         "new": "הוסף את ",
-        "filter": "הקלד שם פרטי, שם משפחה או כינוי, או שם של חבר חדש",
+        "filter-can-add": "הקלד שם פרטי, שם משפחה או כינוי, או שם של חבר חדש",
+        "filter": "הקלד שם פרטי, שם משפחה או כינוי",
         "clear": "נקה",
         "family-connections": "קשרי משפחה",
         "life-summary": " קיצור תולדות החיים של",
