--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -90,6 +90,7 @@
     "members": {
         "members": "חברים",
         "new": "הוסף את ",
+        "add-new-member": "הוסף חבר חדש",
         "filter-can-add": "הקלד שם פרטי, שם משפחה או כינוי, או שם של חבר חדש",
         "filter": "הקלד שם פרטי, שם משפחה או כינוי",
         "clear": "נקה",
