--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -461,6 +461,7 @@
         "add-contact": "הוסף מכותב",
         "contact-details": "פרטי המכותב",
         "mail-contacts": "שלח הודעות למכותבים",
+        "mail-was-sent": "ההודעות נשלחו למכותבים",
         "edit-letter": "הצג / ערוך את המכתב",
         "edit-letter-template": "ערוך את תבנית המכתב",
         "the-link": "הקישור",
