sending group letters. wip.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -461,7 +461,9 @@
         "contact-details": "Contact details",
         "mail-contacts": "Send email to group contacts",
         "mail-was-sent": "Mail was sent to the contacts",
-        "edit-letter": "Display / edit the letter",
+        "edit-letter": "Edit the letter",
+        "view-letter": "View the letter",
+        "send-letter": "Send the letter",
         "edit-letter-template": "Edit letter template",
         "the-link": "the link",
         "need-to-show": "Display or edit before sending"
