--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -462,7 +462,9 @@
         "contact-details": "פרטי המכותב",
         "mail-contacts": "שלח הודעות למכותבים",
         "mail-was-sent": "ההודעות נשלחו למכותבים",
-        "edit-letter": "הצג / ערוך את המכתב",
+        "edit-letter": "ערוך את המכתב",
+        "view-letter": "הצג את המכתב",
+        "send-letter": "שלח את המכתב",
         "edit-letter-template": "ערוך את תבנית המכתב",
         "the-link": "הקישור",
         "need-to-show": "יש להציג או לערוך לפני המשלוח"
