--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -459,6 +459,8 @@
         "explain-dates-range": "<p dir='rtl'><b>טווח תאריכים: </b>דיוק התאריכים יכול להיות בשנים, חודשים או ימים. לאחר שהקלדת את תאריך הבסיס תוכל לבחור את סוף התקופה מהתפריט הנשלף שיופיע.</p>",
         "contacts": "מכותבים",
         "add-contact": "הוסף מכותב",
+        "upload-contacts": "העלה קובץ",
+        "upload-now": "שלח אותו",
         "contact-details": "פרטי המכותב",
         "mail-contacts": "שלח הודעות למכותבים",
         "mail-was-sent": "ההודעות נשלחו למכותבים",
