--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -334,7 +334,8 @@
         "chronological-order-reverse": "סדר כרונולוגי הפוך",
         "edit-face-location": "לעריכת מיקום וגודל המעגל, לחץ על הכפתור הימני של העכבר או גרור את שפת המעגל או את תוכו",
         "click-to-identify": "הקלק על פרצוף כדי לזהותו",
-        "add-details": "הוסף פרטים"
+        "add-details": "הוסף פרטים",
+        "view-map": "הצג את המפה"
     },
     "audios": {
         "audios": "הקלטות",
