--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -335,7 +335,9 @@
         "edit-face-location": "לעריכת מיקום וגודל המעגל, לחץ על הכפתור הימני של העכבר או גרור את שפת המעגל או את תוכו",
         "click-to-identify": "הקלק על פרצוף כדי לזהותו",
         "add-details": "הוסף פרטים",
-        "view-map": "הצג את המפה"
+        "view-map": "הצג את המפה",
+        "out-of": "מתוך ",
+        "to-see-more": "כדי לראות יותר תמונות הקטן אותן"
     },
     "audios": {
         "audios": "הקלטות",
