google maps. wip.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -337,6 +337,7 @@
         "click-to-identify": "Click on a face to identify a person",
         "add-details": "Add details",
         "view-map": "View map",
+        "hide-map": "Hide map",
         "out-of": "out of ",
         "to-see-more": "To see more phots make them smaller"
     },
