--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -336,6 +336,7 @@
         "click-to-identify": "הקלק על פרצוף כדי לזהותו",
         "add-details": "הוסף פרטים",
         "view-map": "הצג את המפה",
+        "hide-map": "הסתר את המפה",
         "out-of": "מתוך ",
         "to-see-more": "כדי לראות יותר תמונות הקטן אותן"
     },
